# RestrictedQuadtree

./: .gitignore  CMakeLists.txt
doc/: Fensterchen CMake HowTo for Linux
framework/: QuadtreeRenderer.cpp  QuadtreeRenderer.hpp  cube.cpp  cube.hpp  data_types_fwd.hpp  imgui.cpp  multi_dim_transfer_function.cpp  multi_dim_transfer_function.hpp  plane.cpp  plane.hpp  quadtree_layout.h  quadtree_layout.inl  transfer_function.cpp  transfer_function.hpp  turntable.hpp  utils.cpp  utils.hpp  volume_loader_raw.cpp  volume_loader_raw.hpp  volume_loader_raw_hurrican.cpp  volume_loader_raw_hurrican.hpp  window.cpp  window.hpp
framework/shader/: quad_shader.frag  quad_shader.vert  quad_texture_shader.frag  quad_texture_shader.vert
source/: CMakeLists.txt  my_volume_raycaster.cpp  restricted_quadtree.cpp
source/shader/: pass_through_GUI.frag  pass_through_GUI.vert  volume (680ms in Konflikt stehende Kopie 2015-03-16).frag  volume.frag  volume.vert
